# discord-imhex

./: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
.github/workflows/: build.yml  rust.yml
src/: imhex.rs  main.rs  tray.rs  updater.rs  utils.rs
tests/: tray_tests.rs  updater_tests.rs  utils_tests.rs
vagrant/linux/: Vagrantfile
vagrant/windows/: Vagrantfile
